--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoose": "^9.0.1",
     "nodemon": "^3.1.11"
   }
 }
