--- a/backend/env.example
+++ b/backend/env.example
@@ -1,6 +1,6 @@
 PORT=5001
 
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/taskdb
+DATABASE_URL=url_here
 
 ACCESS_TOKEN_SECRET=your_super_secret_jwt_key
 
